--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drag-resize": "^0.1.4",
+    "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
