--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "draggable": "^4.2.0",
     "jquery": "^3.6.0",
     "loadash": "^1.0.0",
     "popper.js": "^1.16.1",
@@ -15,7 +16,7 @@
     "react-drag-resize": "^0.1.4",
     "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
